Fix: spacing

--- a/Links_Saver/styles.css
+++ b/Links_Saver/styles.css
@@ -3,16 +3,10 @@
     padding: 0px;
 }
 body{
+    padding: 10px;
     min-width: 400px;
 }
 
-.container{
-    height: 100vh;
-    width: 100vw;
-    background-color: darkorchid;
-    display: grid;
-    place-items: center;
-}
 .sub-container{
     height: 90%;
     width: 90%;
@@ -21,7 +15,7 @@ body{
     /* border: 2px solid black; */
     border-radius: 15px;
     /* text-align: center; */
-    padding: 50px 20px 0px 20px;
+ 
     
     background-color: white;
 }
